movie-matcher/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: movie-matcher
  labels:
    name: movie-matcher
